--- a/vencord.theme.inkypinky.css
+++ b/vencord.theme.inkypinky.css
@@ -17,7 +17,7 @@
     --color04: #7c7ca8;
     --color05: #9f859f;
     --color06: #919ab7;
-    --color07: #a1a2a7;
+    --color07: #9f859f;
     --color08: #434353;
     --color09: #f6bfce;
     --color10: #d1d9e4;
