--- a/walker.css
+++ b/walker.css
@@ -20,3 +20,10 @@ window .search {
   font-size: 14px;
   font-weight: 500;
 }
+
+window .box-wrapper {
+    border-radius: 6px;
+    box-shadow: 0 2px 12px alpha(@selected-text, 0.2);
+    backdrop-filter: blur(10px);
+}
+
