--- a/walker.css
+++ b/walker.css
@@ -5,25 +5,64 @@
 @define-color foreground #c8c8c8;
 @define-color background #13131D;
 
+window * {
+    all: unset;
+    color: @text;
+    background: none;
+    border: none;
+    margin: 0;
+    padding: 0;
+    font-size: 17px;
+}
 
-@define-color hover #9f859f;
-
-
-window .search-container,
-window .search {
-  background: alpha(@hover, 0.3);
-  color: @foreground;
-  border: 2px solid alpha(@border, 0.5);
-  border-radius: 4px;
-  padding: 8px 12px;
-  margin: 4px 0;
-  font-size: 14px;
-  font-weight: 500;
+window .normal-icons,
+window .large-icons,
+window .item-image,
+window .symbols {
+    -gtk-icon-size: 18px;
+    min-width: 0;
+    min-height: 0;
+    padding: 0;
+    margin: 0;
+    display: none;
 }
 
 window .box-wrapper {
-    border-radius: 6px;
-    box-shadow: 0 2px 12px alpha(@selected-text, 0.2);
-    backdrop-filter: blur(10px);
+    background: alpha(@base, 1);           /* dark transparency */
+    border: 1.5px solid alpha(@border, 0.9);    /* visible border */
+    border-radius: 5px;
+    padding: 4px;
+    margin: 0;
+    box-shadow: 0 2px 12px alpha(black, 0.85);
+    backdrop-filter: blur(1px);
+    line-height: 10%;
 }
 
+window .search-container {
+    border: 2px solid alpha(@border, 0.2);    /* visible border */
+    border-radius: 3px;
+    padding: 4px 6px;
+    margin: 0x;
+    background: alpha(@border, 0.65);            /* slightly transparent */
+    box-shadow: inset 0 0 6px alpha(white, 0.0);
+    backdrop-filter: blur(1px);
+    line-height: 1em;
+}
+
+
+window .input {
+    background: transparent;
+    color: @text;
+}
+
+window .preview {
+    border: 0px solid alpha(@border, 0);
+    border-radius: 4px;
+    background: alpha(@base, 0.5);
+    color: @text;
+    padding: 10px 10px 10px;
+    margin: 10px 0px 10px;
+    box-shadow: inset 0 0 8px alpha(white, 0);
+    backdrop-filter: blur(8px);
+    line-height: 1em;
+}
