--- a/vencord.theme.css
+++ b/vencord.theme.css
@@ -15,7 +15,7 @@
         --color04: #c8c8c8;
         --color05: #a6b2c7;
         --color06: #f6bfce;
-        --color07: #a6b2c7;
+        --color07: #e3aebf;
         --color08: #EA90A8;
         --color09: #a6b2c7;
         --color10: #e3aebf;
